--- a/square-root/src/App.css
+++ b/square-root/src/App.css
@@ -114,7 +114,7 @@ body {
   left: 0;
   width: 100%;
   padding: 0.75rem 2rem;
-  background: var(--offWhite);
+  background: var(--mainWhite);
   z-index: 1;
 }
 .nav-header {
