--- a/square-root/src/pages/User/Projects/projects.css
+++ b/square-root/src/pages/User/Projects/projects.css
@@ -11,15 +11,33 @@
     --darkShadow: 4px 10px 5px 0px rgba(0, 0, 0, 0.5);
   }
 
+
 body {
     padding-top: 100px;
     background: var(--offWhite);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     line-height: 1.4;
 }
 
 h1 { 
   display: inline;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: x-large;
+ 
 }
 
+h2 { 
+  display: inline;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 300;
+  font-size: medium;
+}
 
+.project-icon {
+  width: 30px;
+  height: auto;
+}
+
+.projects-title{
+  padding-bottom: 100px;
+}
