--- a/square-root/src/App.css
+++ b/square-root/src/App.css
@@ -23,37 +23,7 @@ body {
   padding-top: 66px;
   color: var(--mainBlack);
   background: var(--mainWhite);
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
   line-height: 1.4;
-}
-h1 {
-  font-size: 3em;
-  line-height: 1;
-  margin-bottom: 0.5em;
-}
-h2 {
-  font-size: 2em;
-  margin-bottom: 0.75em;
-}
-h3 {
-  font-size: 1.5em;
-  line-height: 1;
-  margin-bottom: 1em;
-}
-h4 {
-  font-size: 1.2em;
-  line-height: 1.25;
-  margin-bottom: 1.25em;
-}
-h5 {
-  font-size: 1em;
-  font-weight: bold;
-  margin-bottom: 1.5em;
-}
-h6 {
-  font-size: 1em;
-  font-weight: bold;
-  margin-bottom: 1.5em;
 }
 
 .btn-primary {
@@ -206,12 +176,13 @@ body {
 .banner h1 {
   font-size: 2.5rem;
 }
-.banner div {
+/*.banner div {
   width: 20rem;
   height: 5px;
   background: var(--primaryColor);
   margin: 1.7rem auto;
 }
+*/
 .banner-zip {
   width: 20rem;
   height: 5px;
@@ -222,6 +193,7 @@ body {
   font-size: 1.2rem;
   margin-bottom: 2rem;
 }
+
 @media screen and (min-width: 576px) {
   .banner {
     padding: 2rem 3rem;
