--- a/square-root/src/App.sass
+++ b/square-root/src/App.sass
@@ -21,7 +21,7 @@ $widescreen-enabled: false
 $fullhd-enabled: false
 
 // Update some of Bulma's component variables
-$body-background-color: $beige-lighter
+$body-background-color: $purple
 $control-border-width: 2px
 $input-border-color: transparent
 $input-shadow: none
