--- a/square-root/src/App.css
+++ b/square-root/src/App.css
@@ -24,8 +24,8 @@ body {
   padding-top: 0px;
   color: var(--mainBlack);
   background: var(--mainBlack);
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  line-height: 1.4;
+  /*font-family: Verdana, Geneva, Tahoma, sans-serif;
+  line-height: 1.4;*/
 }
 /*h1 {
   font-size: 3em;
@@ -113,10 +113,10 @@ h6 {
   padding: 0.75rem 2rem;
   width: 100%;
   z-index: 1;
-  height: 80px;
+  /*height: 80px;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center;*/
   font-size: 1.2rem;
 }
 .nav-header {
@@ -144,158 +144,50 @@ h6 {
   transition: var(--mainTransition);
   text-align: center;
   font-size: 1rem;
-  font-weight: 600;
   letter-spacing: var(--mainSpacing);
 }
 .nav-links a:hover {
   border-bottom: 4px solid rgb(0, 0, 0);
   transition: all 0.2s ease-out;
 }
-
-.show-nav {
-  height: 100px;
-}
-
-@media screen and (min-width: 768px) {
-  .nav-center {
-    max-width: 1170px;
-    margin: 0 auto;
-    display: flex;
-  }
-  .nav-links {
-    height: auto;
-    display: flex;
-    margin-left: 4rem;
-  }
-  .nav-links a {
-    margin: 0 1rem;
-    padding: 0.5rem 0;
-  }
-}
-
-/* beach resort tutorial here */
-/*.navbar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  padding: 0.75rem 2rem;
-  background: var(--offWhite);
-  z-index: 1;
-}
-.nav-header {
-  display: flex;
-  justify-content: space-between;
-}
-.nav-btn {
-  background: transparent;
-  border: none;
-  cursor: pointer;
-  outline: none;
-}
-.nav-icon {
-  font-size: 1.5rem;
-  color: var(--primaryColor);
-}
-.nav-links {
-  height: 0;
-  overflow: hidden;
-  transition: var(--mainTransition);
-  list-style-type: none;
-}
-.nav-links a {
-  display: block;
-  text-decoration: none;
-  padding: 1rem 0;
-  color: var(--mainBlack);
-  transition: var(--mainTransition);
-  text-align: center;
-  font-size: 1rem;
-  font-weight: 600;
-  letter-spacing: var(--mainSpacing);
-}
-.nav-links a:hover {
-  color: var(--primaryColor);
-}
-
-.show-nav {
-  height: 100px;
-}
-@media screen and (min-width: 768px) {
-  .nav-btn {
-    display: none;
-  }
-  .nav-center {
-    max-width: 1170px;
-    margin: 0 auto;
-    display: flex;
-  }
-  .nav-links {
-    height: auto;
-    display: flex;
-    margin-left: 4rem;
-  }
-  .nav-links a {
-    margin: 0 1rem;
-    padding: 0.5rem 0;
-  }
-}*/
-
-/*
-
-.btn-link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-decoration: none;
-  padding: 8px 16px;
-  height: 100%;
-  width: 100%;
-}
-
-/*.navbar-item {
-  display: flex !important;
-}
-
-.navbar-end {
-  justify-content: flex-end !important;
-  margin-left: auto !important;
-}*/
-
-/*.nav-links-mobile {
-  display: none;
-}*/
-
-/*.user {
+.user{
   display: block;
   position: absolute;
-  top: 0;
-  transform: translate(-100%, 55%);
-  right: 0.5px;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translate(-100%, -55%);
+  right: -30px;
   cursor: pointer;
 }
+.user-logged{
+  display: block;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translate(-100%, -65%);
+  right: -60px;
+  cursor: pointer;
+  font-size: large;
+  text-align: center;
+}
 
-@media screen and (min-width: 960px) {
-  .nav-btn {
-    display: none;
-  }
-  /*.nav-center {
+@media screen and (min-width: 1190px) {
+  .nav-center {
     max-width: 1170px;
     margin: 0 auto;
-    margin-right: 5rem;
     display: flex;
-  }*/
-/*.nav-links {
+    padding-right: 20rem;
+  }
+  .nav-links {
     height: auto;
     display: flex;
     margin-left: 4rem;
-  }*/
-/*.nav-links a {
+  }
+  .nav-links a {
     margin: 0 1rem;
     padding: 0.5rem 0;
   }
-}*/
-
+}
 /* end of navbar */
 /*sidebar */
 .sidebar-bars {
@@ -305,11 +197,11 @@ h6 {
   outline: none;
   display: block;
   position: absolute;
-  transform: translate(-100%, 60%);
-  top: 1px;
-  right: 2px;
+  top: 0px;
+  transform: translate(-100%, 45%);
+  right: 0;
   z-index: 200;
-  font-size: 1.5rem;
+  font-size: 1.6rem;
 }
 .side-menu {
   background-color: var(--navbarBack);
@@ -323,18 +215,15 @@ h6 {
   transition: 850ms;
   z-index: 200;
 }
-
 .side-menu.active {
   right: 0;
   transition: 350ms;
   box-shadow: 1px 0px 7px rgba(0, 0, 0, 0.5);
   z-index: 200;
 }
-
 .side-menu-items {
   width: 100%;
 }
-
 .sidebar-text {
   display: flex;
   justify-content: start;
@@ -343,7 +232,6 @@ h6 {
   list-style: none;
   height: 60px;
 }
-
 .sidebar-text a {
   text-decoration: none;
   color: var(--mainBlack);
@@ -355,11 +243,9 @@ h6 {
   padding: 0px 16px;
   border-radius: 4px;
 }
-
 .sidebar-text a:hover {
   background-color: var(--mainGrey);
 }
-
 .sidebar-toggle {
   background-color: var(--navbarBack);
   width: 100%;
@@ -370,6 +256,38 @@ h6 {
   z-index: 200;
 }
 /*end of sidebar */
+/* dropdown */
+.dropdown-menu {
+  width: 200px;
+  position: absolute;
+  top: 50%;
+  list-style: none;
+  text-align: start;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translate(-100%, -65%);
+  right: -60px;
+  height: 200px;
+}
+/*.dropdown-menu li {
+  background: #1888ff;
+  cursor: pointer;
+}
+.dropdown-menu li:hover{
+  background: #5cabff;
+}
+.dropdown-menu.clicked {
+  display: none;
+}*/
+.dropdown-link {
+  display: block;
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+  color: var(--mainBlack);
+  padding: 16px;
+}
+/*end of dropdown */
 /* backdrop - backround for side menu, modals etc */
 .backdrop {
   position: fixed;
