update on rooftop page

--- a/square-root/src/components/Rooftop.css
+++ b/square-root/src/components/Rooftop.css
@@ -34,7 +34,9 @@ p{
 .options{
     position: absolute;
     bottom: 0px;
+    width: 42%;
 }
 .tilpass{
-    padding-bottom: 5%;
+    padding-bottom: 20px;
 }
+
