fixed user buttons

--- a/square-root/src/App.sass
+++ b/square-root/src/App.sass
@@ -10,15 +10,18 @@ $pink: #fa7c91
 $brown: #757763
 $beige-light: #d0d1cd
 $beige-lighter: #eff0eb
+$white: #f9f9f9
 
 // Update Bulma's global variables
 $family-sans-serif: 'Nunito', sans-serif
 $grey-dark: $brown
 $grey-light: $beige-light
 $primary: $purple
+$white: $white
 $link: $purple
 $widescreen-enabled: false
 $fullhd-enabled: false
+
 
 // Update some of Bulma's component variables
 $body-background-color: $beige-lighter
