--- a/square-root/src/App.css
+++ b/square-root/src/App.css
@@ -15,9 +15,9 @@
   --darkShadow: 4px 10px 5px 0px rgba(0, 0, 0, 0.5);
   --navbarBack: #f9f9f9;
   --bg: #242526;
-  --bg-accent: #484a4d;
+  --bg-accent: #d3d3d3;
   --text-color: #dadce1;
-  --nav-size: 60px;
+  --nav-size: 80px;
   --border: 1px solid #474a4d;
   --border-radius: 8px;
   --speed: 500ms;
@@ -25,8 +25,8 @@
 /* globals */
 body {
   padding-top: 10px;
-  color: var(--mainWhite);
-  background: var(--mainBlack);
+  color: var(--mainBlack);
+  background: var(--mainWhite);
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -120,7 +120,6 @@ h6 {
   padding: 0.75 2rem;
   top: 0;
   left: 0;
-  border-bottom: var(--border);
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -134,6 +133,7 @@ h6 {
   display: flex;
   justify-content: flex-end;
   margin-right: 15px;
+  padding: 5px;
   align-items: center;
 }
 .nav-item {
@@ -143,6 +143,7 @@ h6 {
   padding: 5px;
 }
 .nav-header {
+  padding: 1rem;
   display: flex;
   justify-content: space-between;
 }
@@ -161,7 +162,7 @@ h6 {
   display: block;
   text-decoration: none;
   padding: 1rem 0;
-  color: var(--mainBlack);
+  color: var(--bg);
   transition: var(--mainTransition);
   text-align: center;
   font-size: 1rem;
@@ -192,13 +193,13 @@ h6 {
 /* end of navbar */
 /*sidebar */
 .sidebar-bars {
-  --button-size: calc(var(--nav-size) * 0.4);
+  --button-size: calc(var(--nav-size) * 0.3);
   width: var(--button-size);
   height: var(--button-size);
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: filter 300ms;
+  transition: filter 86ms;
   cursor: pointer;
 }
 .sidebar-bars:hover {
@@ -209,7 +210,7 @@ h6 {
 }
 .side-menu {
   background-color: var(--navbarBack);
-  width: 600px;
+  width: 550px;
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -248,16 +249,40 @@ h6 {
   border-radius: 4px;
 }
 .sidebar-text a:hover {
-  background-color: var(--mainGrey);
+  background-color: var(--bg);
+  color: var(--offWhite);
 }
 .sidebar-toggle {
   background-color: var(--navbarBack);
   width: 100%;
   height: 80px;
   display: flex;
-  justify-content: start;
+  justify-content: flex-end;
   align-items: center;
+  vertical-align: middle;
   z-index: 200;
+}
+.sidebar-close {
+  margin: 2px 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: filter 86ms;
+  cursor: pointer;
+}
+.sidebar-close:hover {
+  filter: brightness(5.2);
+}
+.sidebar-close svg {
+  fill: var(--bg);
+  width: 16px;
+  height: 16px;
+}
+@media screen and (max-height: 1190px) and (max-width: 1190px) {
+  .side-menu.active {
+    overflow: scroll;
+    scroll-behavior: smooth;
+  }
 }
 /*end of sidebar */
 /* backdrop - backround for side menu, modals etc */
