--- a/square-root/src/components/navbar/Dropdown.css
+++ b/square-root/src/components/navbar/Dropdown.css
@@ -1,124 +1,96 @@
 :root {
-    --primaryColor: #af9a7d;
-    --mainWhite: #fff;
-    --offWhite: #f7f7f7;
-    --mainBlack: #222;
-    --mainGrey: #bababa;
-    --darkGrey: #cfcfcf;
-    --mainTransition: all 0.3s linear;
-    --mainSpacing: 3px;
-    --lightShadow: 2px 5px 3px 0px rgba(0, 0, 0, 0.5);
-    --darkShadow: 4px 10px 5px 0px rgba(0, 0, 0, 0.5);
-    --navbarBack: #f9f9f9;
-    --bg: #242526;
-    --bg-accent: #484a4d;
-    --text-color: #dadce1;
-    --nav-size: 60px;
-    --border: 1px solid #474a4d;
-    --border-radius: 8px;
-    --speed: 500ms;
-  }
+  --primaryColor: #af9a7d;
+  --mainWhite: #fff;
+  --offWhite: #f7f7f7;
+  --mainBlack: #222;
+  --mainGrey: #bababa;
+  --darkGrey: #cfcfcf;
+  --mainTransition: all 0.3s linear;
+  --mainSpacing: 3px;
+  --lightShadow: 2px 5px 3px 0px rgba(0, 0, 0, 0.5);
+  --darkShadow: 4px 10px 5px 0px rgba(0, 0, 0, 0.5);
+  --navbarBack: #f9f9f9;
+  --bg: #242526;
+  --bg-accent: rgba(255, 255, 255, 0.9);
+  --text-color: #dadce1;
+  --nav-size: 60px;
+  --border: 1px solid #474a4d;
+  --border-radius: 8px;
+  --speed: 500ms;
+}
 
-  ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  a {
-    color: var(--text-color);
-    text-decoration: none;
-  }
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
 
-.dropdown {
-    position: absolute;
-    top: 58px;
-    width: 300px;
-    transform: translateX(-30%);
-    background-color: var(--bg);
-    border: var(--border);
-    border-radius: var(--border-radius);
-    padding: 1rem;
-    overflow: hidden;
-    transition: height var(--speed) ease;
-    z-index: 200;
-  }
-  .menu {
-    width: 100%;
-  }
-  .dropdown-item {
-    height: 50px;
-    display: flex;
-    align-items: center;
-    border-radius: var(--border-radius);
-    transition: background var(--speed);
-    padding: 0.5rem;
-  }
-  
-  .dropdown-item .icon-button {
-    margin-right: 0.5rem;
-  }
-  
-  .dropdown-item .icon-button:hover {
-    filter: none;
-  }
-  
-  .dropdown-item:hover {
-    background-color: #525357;
-  }
+a {
+  color: var(--text-color);
+  text-decoration: none;
+}
 
-  .icon-button {
-    --button-size: calc(var(--nav-size) * 0.5);
-    width: var(--button-size);
-    height: var(--button-size);
-    background-color: var(--bg-accent);
-    border-radius: 50%;
-    padding: 5px;
-    margin: 2px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: filter 300ms;
-  }
-  .icon-button:hover {
-    filter: brightness(1.2);
-  }
-  .icon-button svg {
-    fill: var(--text-color);
-    width: 20px;
-    height: 20px;
-  }
+.my-dropdown {
+  position: absolute;
+  top: calc(var(--nav-size) * 0.8);
+  width: 250px;
+  transform: translateX(-20%);
+  background-color: var(--navbarBack);
+  border-radius: var(--border-radius);
+  padding: 1rem;
+  overflow: hidden;
+  transition: height var(--speed) ease;
+  box-shadow: 1px 0px 7px 1px rgba(0, 0, 0, 0.5);
+  z-index: 200;
+}
+.menu {
+  width: 100%;
+}
+.my-dropdown-item {
+  height: 50px;
+  display: flex;
+  align-items: center;
+  border-radius: var(--border-radius);
+  padding: 0.5rem;
+  color: var(--mainBlack);
+}
 
-  /*user */
-  .user-round-button {
-    min-width: 60px;
-    max-width: 600px;
-    height: 40px;
-    text-decoration: none;
-    display: inline-block;
-    outline: none;
-    border-style: none;
-    background-color: var(--bg-accent);
-    color: var(--text-color);
-    overflow: none;
-    border-radius: 16px;
-    transition: filter 300ms;
-    padding: 12px 16px;
-    font-size: 16px;
-    cursor: pointer; 
-  }
-  .round-button:before {
-    content:'';
-    display:inline-block;
-    vertical-align:middle;
-    padding-top:100%;
-  }
-  span {
-    display: inline-block;
-    vertical-align: middle;
-    max-width: 90%;
-    padding-left: 10px;
-  }
-  .user-round-button:hover {
-    filter: brightness(1.2);
-  }
+.my-dropdown-item .icon-button {
+  margin-right: 0.5rem;
+}
+
+.my-dropdown-item .icon-button:hover {
+  filter: none;
+}
+.my-dropdown-item:hover {
+  background-color: var(--bg);
+  color: var(--offWhite);
+}
+
+.icon-button {
+  --button-size: calc(var(--nav-size) * 0.5);
+  width: var(--button-size);
+  height: var(--button-size);
+  background-color: var(--mainGrey);
+  border-radius: 50%;
+  padding: 5px;
+  margin: 2px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: filter 300ms;
+}
+.icon-button:hover {
+  filter: brightness(1.2);
+}
+.icon-button svg {
+  fill: var(--bg);
+  width: 20px;
+  height: 20px;
+}
+/*user */
+.pad {
+  margin-right: 16px;
+  outline: none;
+  text-decoration: none;
+}
