--- a/square-root/src/App.css
+++ b/square-root/src/App.css
@@ -210,7 +210,7 @@ h6 {
 }
 .side-menu {
   background-color: var(--navbarBack);
-  width: 550px;
+  width: 500px;
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -231,11 +231,12 @@ h6 {
 }
 .sidebar-text {
   display: flex;
-  justify-content: start;
+  justify-content: center;
   align-items: center;
-  padding: 8px 0px 8px 16px;
+  padding: 8px 16px 8px 0px;
   list-style: none;
   height: 60px;
+  direction: rtl;
 }
 .sidebar-text a {
   text-decoration: none;
@@ -255,7 +256,7 @@ h6 {
 .sidebar-toggle {
   background-color: var(--navbarBack);
   width: 100%;
-  height: 80px;
+  height: 100px;
   display: flex;
   justify-content: flex-end;
   align-items: center;
